@@ -1,3 +1,8 @@
+2006-10-31  Albert Chu  <chu11@llnl.gov>
+
+	* src/cerebrod/cerebrod_listener_data.c (_setup_monitor_modules):
+	Cleanup strtok code.
+	
 2006-10-30  Albert Chu  <chu11@llnl.gov>
 
 	* src/cerebrod/cerebrod_listener_data.c,
